# crop-ai

./: .gitignore  .prettierignore  .prettierrc  .prettierrc.json  DEMO.md  README.md  bts.jsonc  docker-compose.yml  mongo-init.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: protect-main.yml
LangGraph/: requirements.txt
LangGraph/langGraphFile/: langGraph.py
Ollama/: index.js  package-lock.json  package.json
Ollama/Routes/: chatRoute.js
Ollama/Tools_Functions/: cropRotation.js
apps/ml-server/: README.md  package.json  pyproject.toml  run.py
apps/ml-server/app/: main.py
apps/ml-server/app/utils/: onnx_inference.py  weather_fetch.py  xgboost_inference.py
apps/native/: .env.example  README.md  app.json  babel.config.js  declarations.d.ts  metro.config.js  package.json  tailwind.config.js  tsconfig.json
apps/native/api/: api.ts
apps/native/app/: +not-found.tsx  _layout.tsx
apps/native/assets/: XGBoost.json
apps/native/components/: chatInput.tsx  container.tsx  google-sign-in.tsx  header-button.tsx  sign-in.tsx  sign-up.tsx  signout-btn.tsx
apps/native/lib/: constants.ts  (+6 more)
apps/server/: .env.example  .gitignore  docker-compose.yml  index.js  package.json  requirements.txt  tsconfig.json
apps/web/: index.html  package.json  tsconfig.json
ml-model/: convert.py  requirement.txt
ml-model/notebooks/: Crop_Recommendation_Model.ipynb  Final_recommendationdata_creation.ipynb
nodeJs/: index.js  package-lock.json  package.json
nodeJs/helpers/: cloudinary.js
nodeJs/routes/: chat.js  cropRotationRoute.js
(+98 files in other folders)
